# mira

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_DECISIONS.md  README.md  debug.txt  environment.yml  mira_tool_api.py  pyproject.toml  testing.ipynb  tmp.py
agent/: __init__.py  compaction.py  context_overflow.py  factory.py  llm.py  llm_httpx.py  middleware.py  plan_policy.py  resources.py  subagent_compilation.py  tool_resources.py
agent/planning/: __init__.py  criteria.py  policy.py  proposals.py
agent/resources/: __init__.py  items.py  memories.py  paths.py  project_setup.py  project_tool_runner.py  project_tools.py  python_files.py  skills.py  subagents.py  tool_failures.py  tools.py
agent/tools/: __init__.py  specs.py
cli/: __init__.py  commands.py  git_guard.py  main.py
config/: __init__.py  llm.py  loader.py  metadata.py  runtime.py  settings.py  version.py
memory/: README.md
runtime/: __init__.py  compaction_filter.py  compaction_state.py  context_usage.py  diagnostics.py  error_report.py  message_events.py  message_metadata.py  output_events.py  protocol_events.py  renderer_calls.py  rubric_events.py  runner.py  subagent_events.py  tool_call_args.py  tool_events.py  trace_stream.py  trace_tail.py  usage.py
scripts/: stream_smoke.py
session/: __init__.py  checkpoint.py  context.py  dashboard.py  goals.py  recorder.py  store.py
skills/: README.md
subagents/: README.md
tests/: test_checkpoint.py  test_config.py  test_context_overflow.py  test_error_report.py  test_filesystem_tool_args.py  test_git_guard.py  test_goal_criteria.py  test_metadata.py  test_middleware.py  test_plan_mode.py  test_project_tools.py  test_resources.py  test_runner.py  test_session_context.py  test_settings.py  test_status_bar.py  test_subagent_compilation.py  test_terminal_transcript.py  test_textual_app.py  test_tool_issues_ui.py  test_trace_stream.py  test_windows_input.py  test_windows_scrollbars.py
tests/manual/: file_prompt.md  neat_tidy_audit_prompt.md  plan_policy_live_results.md  prompts.md
ui/: __init__.py  app.py  dialogs.py  interrupts.py  names.py  renderer.py  repl.py  runtime_snapshot.py  splash.py  terminal_colors.py  terminal_transcript.py  windows_clipboard.py  windows_driver.py  windows_input.py  windows_scrollbars.py
ui/styles/: mira.tcss
ui/widgets/: __init__.py  chat_log.py  config_panel.py  prompt_box.py  prompt_panel.py  session_history.py  settings_panel.py  status_bar.py  subagent_panel.py  tool_issues.py
(+7 files in other folders)
