[project]
name = "mira"
version = "1.0.0"
description = "Minimal Iterative Reasoning Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepagents[quickjs]>=0.6.2",
    "Faker>=40.0",
    "langgraph>=0.2",
    "langchain-anyllm",
    "lmstudio>=1.5",
    "pyfiglet>=1.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "textual>=8.2",
    "typer>=0.12",
]

[project.scripts]
mira = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cli", "config", "runtime", "session", "ui"]

[tool.hatch.build.targets.wheel.force-include]
"agent/default_resources" = "agent/default_resources"
"ui/styles/mira.tcss" = "ui/styles/mira.tcss"
".env.example" = ".env.example"
