[project]
name = "mira"
dynamic = ["version"]
description = "Minimal Iterative Reasoning Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coolname>=5.0.0",
    "deepagents[quickjs]>=0.6.12",
    "langchain-quickjs>=0.3.2",
    "langgraph>=1.2.5",
    "langchain-anyllm>=0.0.1a2",
    "lmstudio>=1.5.0",
    "pyfiglet>=1.0.4",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual==8.2.7",
    "typer>=0.24.2,<0.25.0",
]

[project.scripts]
mira = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "cli", "config", "runtime", "session", "ui"]

[tool.hatch.build.targets.wheel.force-include]
"mira_tool_api.py" = "mira_tool_api.py"
".env.example" = ".env.example"

[tool.hatch.version]
path = "config/version.py"
